Add favicon images and site webmanifest
- Added favicon-16x16.png and favicon-32x32.png to the img directory.
- Added favicon.ico file for browser compatibility.
- Created site.webmanifest for PWA support with specified icons and colors.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Beauty Emporia | Premium Hair Salon & Spa in Abuja</title>
+<link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">  <title>Beauty Emporia | Premium Hair Salon & Spa in Abuja</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link
     href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600&family=Montserrat:wght@300;400;500;600&display=swap"
