Enhance SEO and social media integration with Open Graph and Twitter Card meta tags; update description for improved visibility.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">  <title>Beauty Emporia | Premium Hair Salon & Spa in Abuja</title>
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Beauty Emporia | Premium Hair Salon & Spa in Abuja">
+  <meta property="og:description"
+    content="Rated 4.9★ by 120+ clients. Book your next salon appointment online at Beauty Emporia in Abuja.">
+  <meta property="og:image" content="https://beauty-emporia-mockup.vercel.app/img/og-image.jpg">
+  <meta property="og:url" content="https://beauty-emporia-mockup.vercel.app">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Beauty Emporia | Premium Hair Salon & Spa in Abuja">
+  <meta name="twitter:description"
+    content="Rated 4.9★ by 120+ clients. Book your next salon appointment online at Beauty Emporia in Abuja.">
+  <meta name="twitter:image" content="https://beauty-emporia-mockup.vercel.app/img/og-image.jpg">
+  <meta name="twitter:site" content="@beauty_emporia">
+  <meta name="twitter:creator" content="@beauty_emporia">
+  <meta name="description"
+    content="Beauty Emporia - Rated 5.0★ on Google with 100+ happy clients in Abuja. Professional hair braiding, styling, and beauty care services. Book your appointment today!">
+
+  <!-- Favicon and Touch Icons -->
+  <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <title>Beauty Emporia | Premium Hair Salon & Spa in Abuja</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link
     href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600&family=Montserrat:wght@300;400;500;600&display=swap"
@@ -16,45 +38,43 @@
 </head>
 
 <body>
-    <!-- Header & Navigation -->
-    <header>
-        <div class="header-container">
-            <a href="#home" class="logo">
-                <img src="./img/logo.png" alt="Beauty Emporia Logo">
-                <span>Beauty Emporia</span>
-            </a>
-            <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#reviews">Reviews</a></li>
-                <li><a href="#gallery">Gallery</a></li>
-                <li><a href="#booking">Book Now</a></li>
-            </ul>
-            <button class="hamburger"
-                aria-label="Open Menu">
-                <i class="fas fa-bars"></i>
-            </button>
-        </div>
-    </header>
-
-    <!-- Mobile Navigation -->
-    <div class="mobile-nav">
-        <button class="close-btn"
-            aria-label="Close Menu">
-            <i class="fas fa-times"></i>
-        </button>
-        <ul class="mobile-nav-links">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#reviews">Reviews</a></li>
-            <li><a href="#gallery">Gallery</a></li>
-            <li><a href="#booking">Book Now</a></li>
-        </ul>
+  <!-- Header & Navigation -->
+  <header>
+    <div class="header-container">
+      <a href="#home" class="logo">
+        <img src="./img/logo.png" alt="Beauty Emporia Logo">
+        <span>Beauty Emporia</span>
+      </a>
+      <ul class="nav-links">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#reviews">Reviews</a></li>
+        <li><a href="#gallery">Gallery</a></li>
+        <li><a href="#booking">Book Now</a></li>
+      </ul>
+      <button class="hamburger" aria-label="Open Menu">
+        <i class="fas fa-bars"></i>
+      </button>
     </div>
+  </header>
 
-    <div class="overlay"></div>
+  <!-- Mobile Navigation -->
+  <div class="mobile-nav">
+    <button class="close-btn" aria-label="Close Menu">
+      <i class="fas fa-times"></i>
+    </button>
+    <ul class="mobile-nav-links">
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#reviews">Reviews</a></li>
+      <li><a href="#gallery">Gallery</a></li>
+      <li><a href="#booking">Book Now</a></li>
+    </ul>
+  </div>
+
+  <div class="overlay"></div>
 
   <!-- Hero Section -->
   <section class="hero" id="home">
@@ -70,7 +90,8 @@
     <div class="container about-container">
       <div class="about-text">
         <h2 class="section-title animate-on-scroll" data-delay="0">About Us</h2>
-        <p class="animate-on-scroll" data-delay="200">At Beauty Emporia, we specialize in professional hair braiding, styling, and beauty care. Our expert team
+        <p class="animate-on-scroll" data-delay="200">At Beauty Emporia, we specialize in professional hair braiding,
+          styling, and beauty care. Our expert team
           ensures every client leaves with confidence and a smile. Located in the heart of Abuja, we provide premium
           services in a relaxing and luxurious environment.</p>
         <p>With over 5 years of experience, our stylists are trained in the latest techniques and trends to bring your
@@ -177,7 +198,8 @@
           <p class="reviewer">- Amara Nina Uma.</p>
         </div>
       </div>
-      <a href="#" target="_blank" rel="noopener" class="btn animate-on-scroll" data-delay="800" style="margin-top: 40px;">See All Reviews on Google</a>
+      <a href="#" target="_blank" rel="noopener" class="btn animate-on-scroll" data-delay="800"
+        style="margin-top: 40px;">See All Reviews on Google</a>
     </div>
   </section>
 
@@ -233,8 +255,10 @@
   <!-- Booking Section -->
   <section class="booking" id="booking">
     <div class="container">
-      <h2 class="section-title animate-on-scroll" data-delay="0" style="color: var(--color-white);">Book Your Next Appointment Today</h2>
-      <p class="animate-on-scroll" data-delay="200" style="margin-bottom: 30px; font-size: 1.2rem;">Experience the luxury and expertise of Beauty Emporia</p>
+      <h2 class="section-title animate-on-scroll" data-delay="0" style="color: var(--color-white);">Book Your Next
+        Appointment Today</h2>
+      <p class="animate-on-scroll" data-delay="200" style="margin-bottom: 30px; font-size: 1.2rem;">Experience the
+        luxury and expertise of Beauty Emporia</p>
       <a href="https://wa.me/2348123456789" class="btn animate-on-scroll" data-delay="400">Chat with Us on WhatsApp</a>
     </div>
   </section>
