Update Open Graph and Twitter meta tags for improved SEO; enhance description for better visibility.

--- a/index.html
+++ b/index.html
@@ -4,24 +4,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Open Graph Meta Tags -->
+  <meta name="description"
+    content="Beauty Emporia - Rated 5.0★ on Google with 100+ happy clients in Abuja. Professional hair braiding, styling, and beauty care services. Book your appointment today!">
+
+  <!-- Open Graph -->
   <meta property="og:title" content="Beauty Emporia | Premium Hair Salon & Spa in Abuja">
   <meta property="og:description"
     content="Rated 4.9★ by 120+ clients. Book your next salon appointment online at Beauty Emporia in Abuja.">
-  <meta property="og:image" content="https://beauty-emporia-mockup.vercel.app/img/og-image.jpg">
-  <meta property="og:url" content="https://beauty-emporia-mockup.vercel.app">
   <meta property="og:type" content="website">
+  <meta property="og:url" content="https://beauty-emporia-mockup.vercel.app">
+  <meta property="og:image" content="https://beauty-emporia-mockup.vercel.app/img/android-chrome-512x512.png?v=2">
+  <meta property="og:image:secure_url"
+    content="https://beauty-emporia-mockup.vercel.app/img/android-chrome-512x512.png?v=2">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="512">
+  <meta property="og:image:height" content="512">
+  <link rel="image_src" href="https://beauty-emporia-mockup.vercel.app/img/android-chrome-512x512.png?v=2">
 
-  <!-- Twitter Card Meta Tags -->
+  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Beauty Emporia | Premium Hair Salon & Spa in Abuja">
   <meta name="twitter:description"
     content="Rated 4.9★ by 120+ clients. Book your next salon appointment online at Beauty Emporia in Abuja.">
-  <meta name="twitter:image" content="https://beauty-emporia-mockup.vercel.app/img/og-image.jpg">
+  <meta name="twitter:image" content="https://beauty-emporia-mockup.vercel.app/img/android-chrome-512x512.png?v=2">
   <meta name="twitter:site" content="@beauty_emporia">
   <meta name="twitter:creator" content="@beauty_emporia">
-  <meta name="description"
-    content="Beauty Emporia - Rated 5.0★ on Google with 100+ happy clients in Abuja. Professional hair braiding, styling, and beauty care services. Book your appointment today!">
 
   <!-- Favicon and Touch Icons -->
   <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
